2003-09-24  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-node.c

	Rewrite of overzealous g_assert that was stopping entities working (cf bug #122967 and about 10 dups)

	* cong-editor-node-entity-decl.c, cong-editor-node-entity-ref.c

	Use of CongEditorAreaStructural to make entity declarations and entity references look funky

	* cong-editor-area-structural-tag.c, cong-editor-area-structural-tag.h

	CongEditorAreaStructuralTag is now a subclass of the new CongEditorAreaStructural, rather than CongEditorAreaBin
	
	* cong-dispspec.c

	Moved hackish GdkGC allocation into a separate routine
	
	* cong-editor-area-structural.h, cong-editor-area-structural.c, Makefile.am

	New files refactoring most of cong-editor-area-structural-tag into a new parent class, now shared with entity code 

2003-09-24  Geert-Jan Van den Bogaerde <gvdbogaerde@pandora.be>

        * cong-menus.c

        Added Ctrl+U keybinding for View Source (bug #123064).

2003-09-23  David Malcolm <david@davemalcolm.demon.co.uk>

	* cursor.c

	Applied patch by Raphael Jacquot to make the cursor black for greater visibility
	
	--- Version 0.7.3 ---	

	* Makefile.am

	Added cong-editor-widget.h back
	
2003-09-22  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-widget.h

	Re-adding: had forgotten this one was still needed

	* cong-dummy-element-editor.c, cong-element-editor.c, cong-section-head-editor.c, cong-span-text-editor.c, cong-editor-widget.c, cong-editor-widget.h, cong-editor-widget-impl.h

	Removing source files for old widget from CVS (CongEditorWidget2)

	* cong-plugin.c, cong-plugin.h, cong-primary-window.c, global.h, plugin-lists.c, plugin-paragraph.c, plugin-xsl.c, Makefile.am

	Removed references to old editor widget (CongEditorWidget2)

2003-09-21  Geert Stappers <stappers@stappers.nl>

	* cong-file-print.c & cong-file-export.c
	Unmarked empty strings for translation.

2003-09-21  David Malcolm <david@davemalcolm.demon.co.uk>

	* main.c
